Minor changes for debugging. Main issue: render.yaml isnt executing
